# gurun

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
gurun/: __init__.py  example.py  exceptions.py  node.py  runner.py  utils.py
gurun/cv/: __init__.py  detection.py  transformation.py  utils.py
gurun/gui/: __init__.py  io.py  os.py  screenshot.py
gurun/nodes/: __init__.py  base.py  utils.py
tests/: test_example.py  test_node.py  test_runner.py  test_utils.py
